# qtaccountsservice

./: .gitattributes  .gitignore  .qmake.conf  .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  features.cmake  qtaccountsservice.pro  qtaccountsservice.qbs  sync.profile
.github/workflows/: build.yml  checks.yml
.travis/: PKGBUILD.in  bintray.json  bintray.json.in  bintray.sh  build.sh
data/cmake/: CMakeLists.txt  QtAccountsServiceConfig.cmake.in
data/interfaces/: org.freedesktop.Accounts.User.xml
examples/: CMakeLists.txt  examples.pro  examples.qbs
examples/listusers/: CMakeLists.txt  listusers.pro  listusers.qbs  main.cpp
examples/loggedinuser/: CMakeLists.txt  loggedinuser.qbs  loggedinuser.qml  main.cpp  resources.qrc
examples/qml/: current-login-user.qml  listusers.qml
examples/useraccount/: CMakeLists.txt  main.cpp  resources.qrc  useraccount.pro  useraccount.qbs  useraccount.qml
examples/userslistview/: CMakeLists.txt  main.cpp  resources.qrc  userslistview.qbs  userslistview.qml
headers/: CMakeLists.txt
headers/QtAccountsService/: CMakeLists.txt  accountsservice_global.h
src/: CMakeLists.txt  deployment.qbs  src.pro
src/accountsservice/: CMakeLists.txt  QtAccountsServiceConfig.cmake.in  accountsmanager.cpp  accountsmanager.h  accountsmanager_p.h  accountsservice.pro  accountsservice.qbs  accountsservice_global.h  qtaccountsserviceglobal.h  useraccount.cpp  useraccount.h  useraccount_p.h  usersmodel.cpp  usersmodel.h  usersmodel_p.h
src/imports/: CMakeLists.txt  imports.pro  imports.qbs
src/imports/accountsservice/: CMakeLists.txt  accountsservice.pro  accountsservice.qbs  main.cpp  plugins.qmltypes  qmldir
tests/auto/: CMakeLists.txt  auto.pro  auto.qbs  fakeaccounts.cpp  fakeaccounts.h  fakeuser.cpp  fakeuser.h  tst_api.cpp
tests/auto/api/: CMakeLists.txt  api.pro  api.qbs  fakeaccounts.cpp  fakeaccounts.h  fakeuser.cpp  fakeuser.h  tst_api.cpp
